# idd-tc-mortality

./: .gitignore  README.md  pyproject.toml
.claude/: DEAD_ENDS.md  DECISIONS.md  STATUS.md  memory.md  settings.json
.claude/commands/: REPOS.md  bail.md  whereami.md  wrap.md
.github/: copilot-instructions.md
notebooks/: dh_final_diagnostics.ipynb  dh_intermediate_diagnostics.ipynb  dh_preliminary_diagnostics.ipynb  dh_refined_diagnostics.ipynb  explore_data.ipynb  exposure_diagnostic.ipynb  process_emdat.ipynb
notebooks/20260714_v1985/: dh_preliminary_diagnostics.ipynb  dh_refined_diagnostics.ipynb
notebooks/20260714_v1990/: dh_preliminary_diagnostics.ipynb  dh_refined_diagnostics.ipynb
notebooks/20260714_v1995/: dh_preliminary_diagnostics.ipynb  dh_refined_diagnostics.ipynb
reports/: _helpers.py  preliminary_decisions.html  preliminary_decisions.qmd  preliminary_decisions_post2000.qmd
reports/preliminary_decisions_files/libs/bootstrap/: bootstrap-eb081c6c9a720a77ff2cb925aa72e105.min.css
scripts/: build_draws.py  build_sr_version_files.py  build_topsis_draws.py  calibrate_evaluate.py  cleanup_au_for_repredict.sh  cleanup_sdi_affected.py  predict_consolidated_probe.py  run_model1_a0.py  survivors_20260608.json  survivors_20260714_v1985.json  survivors_20260714_v1990.json  survivors_20260714_v1995.json
scripts/ingest/: 01_prepare_input_data.py  02_prepare_is_island.py
src/idd_tc_mortality/: cache.py  combine.py  constants.py  cv.py  features.py  metrics.py  model.py  refit_with_objects.py  s1.py  s2.py  thresholds.py
src/idd_tc_mortality/distributions/: __init__.py  base.py  beta.py  binomial_cloglog.py  gamma.py  gpd.py  log_logistic.py  lognormal.py  nb.py  poisson.py  scaled_logit.py  truncated_normal.py  weibull.py
src/idd_tc_mortality/evaluate/: assemble.py  build_evaluate_tasks.py  build_final_cells.py  build_half_coupled_multiconfig_tasks.py  build_half_coupled_tasks.py  build_neighbor_tasks.py  build_refined_cells.py  predict_component.py  run_evaluate.py  run_evaluate_orchestrate.py
src/idd_tc_mortality/fit/: fit_component.py  orchestrate.py  run_component.py
src/idd_tc_mortality/grid/: build_final_specs.py  build_refined_specs.py  build_refined_specs_post2000.py  grid.py
src/idd_tc_mortality/predict/: __init__.py  aggregate_basin.py  aggregate_finalize.py  aggregate_scenario.py  aggregate_storm_draw.py  aggregate_year_bin.py  build_predict_cells.py  cleanup_aggregates.py  consolidated.py  data_prep.py  diagnostics.py  done_manifest.py  finalize_deliverable.py  models.py  orchestrate.py  orchestrate_consolidated.py  paths.py  postprocess.py  predict_cell.py  predict_tc.py  predict_year_bin.py
src/idd_tc_mortality/select/: model_query.py  model_selection.py  run_select.py
src/idd_tc_mortality/step_00_validate/: run_validate.py  validate.py
src/idd_tc_mortality/uncertainty/: __init__.py  draw_models.py
src/idd_tc_mortality/viz/: predict_plots.py  stage_plots.py
tests/: test_cache.py  test_combine.py  test_cv.py  test_features.py  test_integration.py  test_metrics.py  test_model.py  test_s1.py  test_s2.py  test_thresholds.py
tests/distributions/: test_beta.py  test_binomial_cloglog.py  test_gamma.py  test_gpd.py  test_log_logistic.py  test_lognormal.py  test_nb.py  test_poisson.py  test_scaled_logit.py  test_truncated_normal.py  test_weibull.py
tests/evaluate/: conftest.py  test_assemble.py  test_build_evaluate_tasks.py  test_build_final_cells.py  test_build_refined_cells.py  test_predict_component.py
tests/fit/: test_fit_component.py  test_run_component.py
tests/grid/: test_build_final_specs.py  test_build_refined_specs_post2000.py  test_grid.py
tests/ingest/: test_prepare_input_data.py
tests/predict/: test_data_prep.py  test_finalize_deliverable.py  test_postprocess.py
tests/select/: test_model_query.py  test_model_selection.py
tests/step_00_validate/: test_validate.py
tests/uncertainty/: test_draw_models.py
tests/viz/: conftest.py  test_stage_plots.py
